added small tweaks to previous solution

--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,18 @@ body {
   font-family: 'Lato', sans-serif;
 }
 
+h1 {
+  font-size: 40px;
+}
+
 img {
-  height: 300px;
-  width: 300px;
+  height: 400px;
+  width: 400px;
+}
+
+p {
+  font-size: 18px;
+  line-height: 30px;
 }
 
 .main {
@@ -16,10 +25,15 @@ img {
   margin: 50px auto;
 }
 
+.meta {
+  font-size: 13px;
+}
+
 .title,
 .meta,
 img,
 p {
+  margin: 0;
   margin-bottom: 40px;
 }
 
